--- a/LendingClub_EDA.ipynb
+++ b/LendingClub_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMEGb8s9IojXqIdOCZ7VQRX",
+      "authorship_tag": "ABX9TyNb/SR1DElzQ9ksYZiJwfAd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2320,156 +2320,83 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Basic Info about the dataset"
+        "## Basic Info about the dataframe"
       ],
       "metadata": {
         "id": "kIXN5T5v3YJU"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Checking the dimensions"
+      ],
+      "metadata": {
+        "id": "PvcbtQ-YARGX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "print(\"***********List of Available Variables***********\")\n",
-        "for i,cols in enumerate(data.columns):\n",
-        "  print(f\"{i+1}. {cols}\")"
+        "data.shape\n",
+        "print(f\"Number of Features : {data.shape[1]}\")\n",
+        "print(f\"Number of Records : {data.shape[0]}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tMeQKbPFcKwD",
-        "outputId": "ac126222-4700-4081-b4ee-4daddb7d2b5c"
+        "outputId": "3e29049c-4a7c-4371-90e2-61d89c13f5f9"
       },
-      "execution_count": 29,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "***********List of Available Variables***********\n",
-            "1. id\n",
-            "2. member_id\n",
-            "3. loan_amnt\n",
-            "4. funded_amnt\n",
-            "5. funded_amnt_inv\n",
-            "6. term\n",
-            "7. int_rate\n",
-            "8. installment\n",
-            "9. grade\n",
-            "10. sub_grade\n",
-            "11. emp_title\n",
-            "12. emp_length\n",
-            "13. home_ownership\n",
-            "14. annual_inc\n",
-            "15. verification_status\n",
-            "16. issue_d\n",
-            "17. loan_status\n",
-            "18. pymnt_plan\n",
-            "19. url\n",
-            "20. desc\n",
-            "21. purpose\n",
-            "22. title\n",
-            "23. zip_code\n",
-            "24. addr_state\n",
-            "25. dti\n",
-            "26. delinq_2yrs\n",
-            "27. earliest_cr_line\n",
-            "28. inq_last_6mths\n",
-            "29. mths_since_last_delinq\n",
-            "30. mths_since_last_record\n",
-            "31. open_acc\n",
-            "32. pub_rec\n",
-            "33. revol_bal\n",
-            "34. revol_util\n",
-            "35. total_acc\n",
-            "36. initial_list_status\n",
-            "37. out_prncp\n",
-            "38. out_prncp_inv\n",
-            "39. total_pymnt\n",
-            "40. total_pymnt_inv\n",
-            "41. total_rec_prncp\n",
-            "42. total_rec_int\n",
-            "43. total_rec_late_fee\n",
-            "44. recoveries\n",
-            "45. collection_recovery_fee\n",
-            "46. last_pymnt_d\n",
-            "47. last_pymnt_amnt\n",
-            "48. next_pymnt_d\n",
-            "49. last_credit_pull_d\n",
-            "50. collections_12_mths_ex_med\n",
-            "51. mths_since_last_major_derog\n",
-            "52. policy_code\n",
-            "53. application_type\n",
-            "54. annual_inc_joint\n",
-            "55. dti_joint\n",
-            "56. verification_status_joint\n",
-            "57. acc_now_delinq\n",
-            "58. tot_coll_amt\n",
-            "59. tot_cur_bal\n",
-            "60. open_acc_6m\n",
-            "61. open_il_6m\n",
-            "62. open_il_12m\n",
-            "63. open_il_24m\n",
-            "64. mths_since_rcnt_il\n",
-            "65. total_bal_il\n",
-            "66. il_util\n",
-            "67. open_rv_12m\n",
-            "68. open_rv_24m\n",
-            "69. max_bal_bc\n",
-            "70. all_util\n",
-            "71. total_rev_hi_lim\n",
-            "72. inq_fi\n",
-            "73. total_cu_tl\n",
-            "74. inq_last_12m\n",
-            "75. acc_open_past_24mths\n",
-            "76. avg_cur_bal\n",
-            "77. bc_open_to_buy\n",
-            "78. bc_util\n",
-            "79. chargeoff_within_12_mths\n",
-            "80. delinq_amnt\n",
-            "81. mo_sin_old_il_acct\n",
-            "82. mo_sin_old_rev_tl_op\n",
-            "83. mo_sin_rcnt_rev_tl_op\n",
-            "84. mo_sin_rcnt_tl\n",
-            "85. mort_acc\n",
-            "86. mths_since_recent_bc\n",
-            "87. mths_since_recent_bc_dlq\n",
-            "88. mths_since_recent_inq\n",
-            "89. mths_since_recent_revol_delinq\n",
-            "90. num_accts_ever_120_pd\n",
-            "91. num_actv_bc_tl\n",
-            "92. num_actv_rev_tl\n",
-            "93. num_bc_sats\n",
-            "94. num_bc_tl\n",
-            "95. num_il_tl\n",
-            "96. num_op_rev_tl\n",
-            "97. num_rev_accts\n",
-            "98. num_rev_tl_bal_gt_0\n",
-            "99. num_sats\n",
-            "100. num_tl_120dpd_2m\n",
-            "101. num_tl_30dpd\n",
-            "102. num_tl_90g_dpd_24m\n",
-            "103. num_tl_op_past_12m\n",
-            "104. pct_tl_nvr_dlq\n",
-            "105. percent_bc_gt_75\n",
-            "106. pub_rec_bankruptcies\n",
-            "107. tax_liens\n",
-            "108. tot_hi_cred_lim\n",
-            "109. total_bal_ex_mort\n",
-            "110. total_bc_limit\n",
-            "111. total_il_high_credit_limit\n"
+            "Number of Columns : 111\n",
+            "Number of Rows : 39717\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Features before preprocessing data"
+      ],
       "metadata": {
-        "id": "gJner-4QcKtW"
+        "id": "1ogzr7DsAX1_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Features before preprocessing the data\")\n",
+        "col = []\n",
+        "for cols in data.columns:\n",
+        "  col.append(cols)\n",
+        "print(col)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gJner-4QcKtW",
+        "outputId": "0f45a082-0d5e-43ed-858c-7a64b16ac174"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Column names before preprocessing the data\n",
+            "['id', 'member_id', 'loan_amnt', 'funded_amnt', 'funded_amnt_inv', 'term', 'int_rate', 'installment', 'grade', 'sub_grade', 'emp_title', 'emp_length', 'home_ownership', 'annual_inc', 'verification_status', 'issue_d', 'loan_status', 'pymnt_plan', 'url', 'desc', 'purpose', 'title', 'zip_code', 'addr_state', 'dti', 'delinq_2yrs', 'earliest_cr_line', 'inq_last_6mths', 'mths_since_last_delinq', 'mths_since_last_record', 'open_acc', 'pub_rec', 'revol_bal', 'revol_util', 'total_acc', 'initial_list_status', 'out_prncp', 'out_prncp_inv', 'total_pymnt', 'total_pymnt_inv', 'total_rec_prncp', 'total_rec_int', 'total_rec_late_fee', 'recoveries', 'collection_recovery_fee', 'last_pymnt_d', 'last_pymnt_amnt', 'next_pymnt_d', 'last_credit_pull_d', 'collections_12_mths_ex_med', 'mths_since_last_major_derog', 'policy_code', 'application_type', 'annual_inc_joint', 'dti_joint', 'verification_status_joint', 'acc_now_delinq', 'tot_coll_amt', 'tot_cur_bal', 'open_acc_6m', 'open_il_6m', 'open_il_12m', 'open_il_24m', 'mths_since_rcnt_il', 'total_bal_il', 'il_util', 'open_rv_12m', 'open_rv_24m', 'max_bal_bc', 'all_util', 'total_rev_hi_lim', 'inq_fi', 'total_cu_tl', 'inq_last_12m', 'acc_open_past_24mths', 'avg_cur_bal', 'bc_open_to_buy', 'bc_util', 'chargeoff_within_12_mths', 'delinq_amnt', 'mo_sin_old_il_acct', 'mo_sin_old_rev_tl_op', 'mo_sin_rcnt_rev_tl_op', 'mo_sin_rcnt_tl', 'mort_acc', 'mths_since_recent_bc', 'mths_since_recent_bc_dlq', 'mths_since_recent_inq', 'mths_since_recent_revol_delinq', 'num_accts_ever_120_pd', 'num_actv_bc_tl', 'num_actv_rev_tl', 'num_bc_sats', 'num_bc_tl', 'num_il_tl', 'num_op_rev_tl', 'num_rev_accts', 'num_rev_tl_bal_gt_0', 'num_sats', 'num_tl_120dpd_2m', 'num_tl_30dpd', 'num_tl_90g_dpd_24m', 'num_tl_op_past_12m', 'pct_tl_nvr_dlq', 'percent_bc_gt_75', 'pub_rec_bankruptcies', 'tax_liens', 'tot_hi_cred_lim', 'total_bal_ex_mort', 'total_bc_limit', 'total_il_high_credit_limit']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
