--- a/LendingClub_EDA.ipynb
+++ b/LendingClub_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNb/SR1DElzQ9ksYZiJwfAd",
+      "authorship_tag": "ABX9TyOgnuP81YSLxf+pEk/zqIf3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 79,
       "metadata": {
         "id": "GoB5mZt0C0k6"
       },
@@ -121,15 +121,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qMUJ-U0GcK2G",
-        "outputId": "6cc6533c-17c9-4d4b-c9c2-70c46a35a2d1"
+        "outputId": "cb9d7a7b-52ae-4588-8c0c-287e2e0ecd1e"
       },
-      "execution_count": 2,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -147,13 +147,15 @@
       "cell_type": "code",
       "source": [
         "file_path = '/content/drive/MyDrive/Stats&ML_Dataset/loan.csv'\n",
-        "data = pd.read_csv(file_path)\n",
+        "original_data = pd.read_csv(file_path)\n",
         "\n",
         "# To display all columns and all rows\n",
         "pd.set_option('display.max_columns',None)\n",
         "pd.set_option('display.max_rows',None)\n",
         "pd.set_option('display.colheader_justify','left')\n",
         "\n",
+        "# Creating a copy to work on the analysis\n",
+        "data = original_data.copy()\n",
         "data.head()"
       ],
       "metadata": {
@@ -162,9 +164,9 @@
           "height": 677
         },
         "id": "pzqRKxfacKyp",
-        "outputId": "2143013a-1fc6-4987-cc4b-f3bf1ce12541"
+        "outputId": "f354c8ca-158e-4a5f-ad5d-67b72a5cddfc"
       },
-      "execution_count": 17,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +363,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ff197455-6854-493f-9512-9ec9ab4b886d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0970916a-5bf7-4145-829a-4aea0d790c3c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1070,7 +1072,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ff197455-6854-493f-9512-9ec9ab4b886d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0970916a-5bf7-4145-829a-4aea0d790c3c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1122,12 +1124,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ff197455-6854-493f-9512-9ec9ab4b886d button.colab-df-convert');\n",
+              "        document.querySelector('#df-0970916a-5bf7-4145-829a-4aea0d790c3c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ff197455-6854-493f-9512-9ec9ab4b886d');\n",
+              "        const element = document.querySelector('#df-0970916a-5bf7-4145-829a-4aea0d790c3c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1147,8 +1149,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a900602a-3a90-48cc-b484-d86ad51ff940\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a900602a-3a90-48cc-b484-d86ad51ff940')\"\n",
+              "<div id=\"df-3d39bb8f-b831-4ed0-bb46-044a42f8429b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3d39bb8f-b831-4ed0-bb46-044a42f8429b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1267,7 +1269,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a900602a-3a90-48cc-b484-d86ad51ff940 button');\n",
+              "        document.querySelector('#df-3d39bb8f-b831-4ed0-bb46-044a42f8429b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2313,7 +2315,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 81
         }
       ]
     },
@@ -2329,7 +2331,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Checking the dimensions"
+        "**Checking the dimensions**"
       ],
       "metadata": {
         "id": "PvcbtQ-YARGX"
@@ -2347,16 +2349,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tMeQKbPFcKwD",
-        "outputId": "3e29049c-4a7c-4371-90e2-61d89c13f5f9"
+        "outputId": "f393926e-b65f-4cd2-f4f5-46d9bdc629d6"
       },
-      "execution_count": 31,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Number of Columns : 111\n",
-            "Number of Rows : 39717\n"
+            "Number of Features : 111\n",
+            "Number of Records : 39717\n"
           ]
         }
       ]
@@ -2364,7 +2366,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Features before preprocessing data"
+        "**Features before preprocessing data**"
       ],
       "metadata": {
         "id": "1ogzr7DsAX1_"
@@ -2384,16 +2386,60 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gJner-4QcKtW",
-        "outputId": "0f45a082-0d5e-43ed-858c-7a64b16ac174"
+        "outputId": "23eaebca-9b27-47b0-ecf9-8ca8065a2fd7"
       },
-      "execution_count": 34,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Column names before preprocessing the data\n",
+            "Features before preprocessing the data\n",
             "['id', 'member_id', 'loan_amnt', 'funded_amnt', 'funded_amnt_inv', 'term', 'int_rate', 'installment', 'grade', 'sub_grade', 'emp_title', 'emp_length', 'home_ownership', 'annual_inc', 'verification_status', 'issue_d', 'loan_status', 'pymnt_plan', 'url', 'desc', 'purpose', 'title', 'zip_code', 'addr_state', 'dti', 'delinq_2yrs', 'earliest_cr_line', 'inq_last_6mths', 'mths_since_last_delinq', 'mths_since_last_record', 'open_acc', 'pub_rec', 'revol_bal', 'revol_util', 'total_acc', 'initial_list_status', 'out_prncp', 'out_prncp_inv', 'total_pymnt', 'total_pymnt_inv', 'total_rec_prncp', 'total_rec_int', 'total_rec_late_fee', 'recoveries', 'collection_recovery_fee', 'last_pymnt_d', 'last_pymnt_amnt', 'next_pymnt_d', 'last_credit_pull_d', 'collections_12_mths_ex_med', 'mths_since_last_major_derog', 'policy_code', 'application_type', 'annual_inc_joint', 'dti_joint', 'verification_status_joint', 'acc_now_delinq', 'tot_coll_amt', 'tot_cur_bal', 'open_acc_6m', 'open_il_6m', 'open_il_12m', 'open_il_24m', 'mths_since_rcnt_il', 'total_bal_il', 'il_util', 'open_rv_12m', 'open_rv_24m', 'max_bal_bc', 'all_util', 'total_rev_hi_lim', 'inq_fi', 'total_cu_tl', 'inq_last_12m', 'acc_open_past_24mths', 'avg_cur_bal', 'bc_open_to_buy', 'bc_util', 'chargeoff_within_12_mths', 'delinq_amnt', 'mo_sin_old_il_acct', 'mo_sin_old_rev_tl_op', 'mo_sin_rcnt_rev_tl_op', 'mo_sin_rcnt_tl', 'mort_acc', 'mths_since_recent_bc', 'mths_since_recent_bc_dlq', 'mths_since_recent_inq', 'mths_since_recent_revol_delinq', 'num_accts_ever_120_pd', 'num_actv_bc_tl', 'num_actv_rev_tl', 'num_bc_sats', 'num_bc_tl', 'num_il_tl', 'num_op_rev_tl', 'num_rev_accts', 'num_rev_tl_bal_gt_0', 'num_sats', 'num_tl_120dpd_2m', 'num_tl_30dpd', 'num_tl_90g_dpd_24m', 'num_tl_op_past_12m', 'pct_tl_nvr_dlq', 'percent_bc_gt_75', 'pub_rec_bankruptcies', 'tax_liens', 'tot_hi_cred_lim', 'total_bal_ex_mort', 'total_bc_limit', 'total_il_high_credit_limit']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Percentage of missing values in the dataframe**"
+      ],
+      "metadata": {
+        "id": "qmOaCKhDCH_d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mis_val = data.isnull().sum()\n",
+        "mis_val_percent = round(100 * data.isnull().sum()/len(data),2)\n",
+        "mis_val_table = pd.concat([mis_val,mis_val_percent],axis=1)\n",
+        "mis_val_table.columns = ['Missing Values', '% of Total Values']\n",
+        "mis_val_table = mis_val_table.sort_values('% of Total Values',ascending=False)\n",
+        "mis_val_gt30 = mis_val_table[mis_val_table['% of Total Values'] >= 30]\n",
+        "mis_val_lt30 = mis_val_table[(mis_val_table['% of Total Values'] != 0) & (mis_val_table['% of Total Values'] < 30)]\n",
+        "\n",
+        "print(f\"Dataframe has {data.shape[1]} Columns\")\n",
+        "print(f\"There are {mis_val_gt30.shape[0]} Columns which have more than 30% missing values - Columns to be removed\")\n",
+        "print(f\"There are {mis_val_lt30.shape[0]} Columns which have less than 30% missing values - Columns to undergo data preprocessing\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "APPKiVRdcKqx",
+        "outputId": "c215febf-aaa3-48ba-f115-1ce1280fcc7d"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataframe has 111 Columns\n",
+            "There are 58 Columns which have more than 30% missing values - Columns to be removed\n",
+            "There are 10 Columns which have less than 30% missing values - Columns to undergo data preprocessing\n"
           ]
         }
       ]
@@ -2402,18 +2448,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "APPKiVRdcKqx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
         "id": "_JQOTHyocKoI"
       },
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -2422,7 +2459,7 @@
       "metadata": {
         "id": "otFKW-twcKlk"
       },
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -2431,7 +2468,7 @@
       "metadata": {
         "id": "_wB8FL4vcKjN"
       },
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": []
     }
   ]
