--- a/LendingClub_EDA.ipynb
+++ b/LendingClub_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO+Y5MyQ1BhvdlFumVyEk8N",
+      "authorship_tag": "ABX9TyMJPUYy4tGu8N4Uh9acFW2e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1895,7 +1895,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###### Categorical Columns with single unique value"
+        "###### **Categorical Columns with single unique value**"
       ],
       "metadata": {
         "id": "u86m50uok1GZ"
@@ -2192,7 +2192,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###### Categorical Columns having all values as unique"
+        "###### **Categorical Columns having all values as unique**"
       ],
       "metadata": {
         "id": "3rQQyAo3lNyx"
@@ -2389,7 +2389,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###### Numerical Columns with single unique value"
+        "###### **Numerical Columns with single unique value**"
       ],
       "metadata": {
         "id": "uO6GfBivHWq7"
@@ -2704,7 +2704,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###### Numerical Columns having all values as unique"
+        "###### **Numerical Columns having all values as unique**"
       ],
       "metadata": {
         "id": "hENNjIjLHWrD"
