--- a/LendingClub_EDA.ipynb
+++ b/LendingClub_EDA.ipynb
@@ -8,8 +8,7 @@
         "5wSZ5ft9zgoi"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOpWSGYi8EpwcFZDaZH2BJz",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOpWSGYi8EpwcFZDaZH2BJz"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,16 +19,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Theveetha/LendingClub_EDA_CaseStudy/blob/main/LendingClub_EDA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
