--- a/LendingClub_EDA.ipynb
+++ b/LendingClub_EDA.ipynb
@@ -8,7 +8,8 @@
         "5wSZ5ft9zgoi"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOpWSGYi8EpwcFZDaZH2BJz"
+      "authorship_tag": "ABX9TyOpWSGYi8EpwcFZDaZH2BJz",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +20,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Theveetha/LendingClub_EDA_CaseStudy/blob/main/LendingClub_EDA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -55,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1091,
+      "execution_count": null,
       "metadata": {
         "id": "GoB5mZt0C0k6"
       },
@@ -92,7 +103,7 @@
         "id": "qMUJ-U0GcK2G",
         "outputId": "7474500a-7e85-4255-dbbc-254a9364b4a3"
       },
-      "execution_count": 1092,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +145,7 @@
         "id": "pzqRKxfacKyp",
         "outputId": "870596ac-7ac1-452b-80af-deb306653432"
       },
-      "execution_count": 1093,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1284,7 +1295,7 @@
       "metadata": {
         "id": "liP-T0U0e6wb"
       },
-      "execution_count": 1094,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1301,7 +1312,7 @@
       "metadata": {
         "id": "Mr2wP5eRfDbl"
       },
-      "execution_count": 1095,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1315,7 +1326,7 @@
       "metadata": {
         "id": "E10ifkLPff1-"
       },
-      "execution_count": 1096,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1331,7 +1342,7 @@
       "metadata": {
         "id": "aEhCvmkKfhrB"
       },
-      "execution_count": 1097,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1350,7 +1361,7 @@
       "metadata": {
         "id": "Rg0Vde5bf9t2"
       },
-      "execution_count": 1098,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1365,7 +1376,7 @@
       "metadata": {
         "id": "SbwRK8VAhSFV"
       },
-      "execution_count": 1099,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1383,7 +1394,7 @@
       "metadata": {
         "id": "xSdrgLATnYh2"
       },
-      "execution_count": 1100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1402,7 +1413,7 @@
       "metadata": {
         "id": "xfr6l89Yc7Wr"
       },
-      "execution_count": 1101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1419,7 +1430,7 @@
       "metadata": {
         "id": "jHQ02lrSiGTf"
       },
-      "execution_count": 1102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1436,7 +1447,7 @@
       "metadata": {
         "id": "0dqF5O0JnspP"
       },
-      "execution_count": 1103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1452,7 +1463,7 @@
       "metadata": {
         "id": "NvGkkTD-DNvJ"
       },
-      "execution_count": 1104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1494,7 +1505,7 @@
         "id": "tMeQKbPFcKwD",
         "outputId": "94991c30-36dd-4883-c4fa-0efb87024ff5"
       },
-      "execution_count": 1105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1531,7 +1542,7 @@
         "id": "gJner-4QcKtW",
         "outputId": "8f6bcef3-4fcd-4b61-c641-214e924d00fb"
       },
-      "execution_count": 1106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1574,7 +1585,7 @@
         "id": "RDlemJaP30S_",
         "outputId": "d9b3907a-55d4-4a6a-f9a1-9f1cd66638ec"
       },
-      "execution_count": 1107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1862,7 +1873,7 @@
       "metadata": {
         "id": "mOGv47MGtone"
       },
-      "execution_count": 1108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1887,7 +1898,7 @@
         "id": "uoGR3duytohP",
         "outputId": "0fabb664-6392-45f7-bbec-bde7edfc24b9"
       },
-      "execution_count": 1109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2272,7 +2283,7 @@
       "metadata": {
         "id": "e-CbBcr7GJmk"
       },
-      "execution_count": 1110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2296,7 +2307,7 @@
         "outputId": "53939a6c-6ef8-47f9-af52-36a892c53e69",
         "id": "ycO6FJVwHWrC"
       },
-      "execution_count": 1111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2738,7 +2749,7 @@
         "id": "vDu1HJ3UYYpp",
         "outputId": "582dde4e-2531-480a-8fd0-20229574a2cc"
       },
-      "execution_count": 1112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3197,7 +3208,7 @@
         "id": "zqrJ2k_BDY3Q",
         "outputId": "c7c5762c-461d-4743-bdcf-41293cbcf120"
       },
-      "execution_count": 1113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3233,7 +3244,7 @@
         "id": "xtGbUdgQ6J4X",
         "outputId": "bac68fe2-1379-4935-e414-0af7c089ac15"
       },
-      "execution_count": 1114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3579,7 +3590,7 @@
         "id": "JCnqYFWmrFvq",
         "outputId": "b344b352-43b6-454f-fd9a-285b5c89de04"
       },
-      "execution_count": 1115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3925,7 +3936,7 @@
         "id": "WNHuD32VtocN",
         "outputId": "022e8355-4124-4184-ab68-7d2214968490"
       },
-      "execution_count": 1116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3986,7 +3997,7 @@
         "id": "E1vEGrVbNAEW",
         "outputId": "59d1ce9f-5f51-4b9f-f0b9-75dba8004d3e"
       },
-      "execution_count": 1117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4022,7 +4033,7 @@
         "id": "mT3pttzw_e7G",
         "outputId": "fc22785e-1eee-428f-b155-4c7e38b887e3"
       },
-      "execution_count": 1118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4067,7 +4078,7 @@
         "id": "97fqDzlcLz3w",
         "outputId": "50348768-9bda-46f3-e8ce-72e40dd4604f"
       },
-      "execution_count": 1119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4644,7 +4655,7 @@
         "id": "vInDq1MOLz0u",
         "outputId": "7dd61aa7-43b7-4146-c92c-aa512a9c67aa"
       },
-      "execution_count": 1120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4690,7 +4701,7 @@
         "id": "8JI-OGtDLzxx",
         "outputId": "47f87a1a-133c-41af-aa3e-22ed6fa6e346"
       },
-      "execution_count": 1121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5292,7 +5303,7 @@
         "id": "2Ts4jL48Lzrf",
         "outputId": "00cc02b6-dded-4962-cc8c-7a1056a06962"
       },
-      "execution_count": 1122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5595,7 +5606,7 @@
         "id": "PQbXm5tJLzoX",
         "outputId": "705b5eef-2443-4e43-8406-f8d4a16ccdc4"
       },
-      "execution_count": 1123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5896,7 +5907,7 @@
         "id": "b3ZRPntQOZAC",
         "outputId": "1495df41-e1b2-40fb-d37f-4509e34738c5"
       },
-      "execution_count": 1124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5930,7 +5941,7 @@
         "id": "uHrcku9JrKjf",
         "outputId": "f300f2d1-f8ab-4e62-9711-b2c656ea685d"
       },
-      "execution_count": 1125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5968,7 +5979,7 @@
         "id": "dO7WQyinNjx3",
         "outputId": "cc882de2-6888-4525-c34c-213e457bbe5b"
       },
-      "execution_count": 1126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6552,7 +6563,7 @@
         "id": "KhG2qySUeFXu",
         "outputId": "01d13661-f190-42f9-9e72-d42d95e03559"
       },
-      "execution_count": 1127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6582,7 +6593,7 @@
         "id": "52vINGz90ySK",
         "outputId": "caa43e92-f790-42b1-d908-c77c8c8b7fa1"
       },
-      "execution_count": 1128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6638,7 +6649,7 @@
         "id": "0lKk2lM90yO-",
         "outputId": "0644c576-30cf-4e01-f3d4-51cf2d2f20cf"
       },
-      "execution_count": 1129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6686,7 +6697,7 @@
         "id": "ZgH5KJC70yLG",
         "outputId": "07d2483c-568f-47cf-88db-52d9e2cb58bb"
       },
-      "execution_count": 1130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6720,7 +6731,7 @@
         },
         "outputId": "fd2cf973-5fc0-4a9a-fcc0-fc1b71d7158d"
       },
-      "execution_count": 1131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6769,7 +6780,7 @@
         "id": "QIBeXvI-oFPO",
         "outputId": "aa434720-aefa-4069-a0f4-d1a11405b92e"
       },
-      "execution_count": 1132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6810,7 +6821,7 @@
         "id": "Hz15zWf0bttC",
         "outputId": "27b67764-b90f-404f-bd00-b0625c4839f2"
       },
-      "execution_count": 1133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6852,7 +6863,7 @@
         "id": "XgeFNewqvmLA",
         "outputId": "32c79621-dc78-4d44-a04e-6847eed5a837"
       },
-      "execution_count": 1134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6902,7 +6913,7 @@
         "id": "o9IV2khwE4bl",
         "outputId": "2039faf4-b369-4ca5-d248-9bc7c7146b98"
       },
-      "execution_count": 1135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6948,7 +6959,7 @@
         "outputId": "747880e8-75b0-49e5-b680-6ef80af7baf2",
         "id": "G8YS9fb3E4bm"
       },
-      "execution_count": 1136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6989,7 +7000,7 @@
         "id": "EdToiE94njzQ",
         "outputId": "27bc01ed-175e-4292-d168-1878ea6356eb"
       },
-      "execution_count": 1137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7026,7 +7037,7 @@
         "id": "MLOOqUXoy47d",
         "outputId": "04be788c-d597-4cf1-c316-6d3ab9ff1a84"
       },
-      "execution_count": 1138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7567,7 +7578,7 @@
         "id": "lEIDm6PFJx-d",
         "outputId": "237e271e-475f-4eca-9b37-16191ee68dec"
       },
-      "execution_count": 1139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7645,7 +7656,7 @@
         "id": "81OizJGnNrCV",
         "outputId": "b2d2bc60-aab8-4e18-9273-591744cdc906"
       },
-      "execution_count": 1140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7708,7 +7719,7 @@
         "id": "hE_zKA8DeD1r",
         "outputId": "856ef1af-cce6-4561-9b9b-681fda99038a"
       },
-      "execution_count": 1141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7736,7 +7747,7 @@
         "id": "4LjBawdsgRV6",
         "outputId": "e1b32232-4d35-4075-8bf3-88779133a427"
       },
-      "execution_count": 1142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7764,7 +7775,7 @@
         "id": "x6dzNYiHYyLq",
         "outputId": "612b800f-d55d-4269-e348-cc1fde064907"
       },
-      "execution_count": 1143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7801,7 +7812,7 @@
         "id": "upEWdVmHNR-l",
         "outputId": "6c4b5bbd-7cf1-440c-892f-a58418639876"
       },
-      "execution_count": 1144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8598,7 +8609,7 @@
         },
         "outputId": "a7f2678b-c4f5-42fe-cda9-e2a0c918b9ef"
       },
-      "execution_count": 1145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
